--- a/index.css
+++ b/index.css
@@ -1,7 +1,44 @@
-#heading {
-    color: red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
 }
 
-#h2heading {
-    color: blue;
+.logo{
+    width: 150px;
+}
+
+.nav-items{
+    padding: 0px 20 px;
+    font-size: 24px;
+}
+
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+}
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+}
+.search {
+    padding: 10px;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-card{
+    margin: 5px;
+    padding: 5px;
+    width: 200px;
+}
+.res-logo{
+    width: 100%;
+}
+
+.res-card:hover{
+    cursor: pointer;
+    border: 3px solid salmon;
+
 }
